missing last character when using readline() on files. bug 407844, r=crowder a=brendan